--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Agri</title>
-</head>
-<body>
+	<head>
+		<link rel="stylesheet" href="style.css">
+		<title>Agri</title>
+	</head>
+	<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+		<h1>This is a Heading</h1>
+		<p>This is a paragraph.</p>
 
-</body>
+	</body>
 </html>
 
