--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
 		<title>Agri</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph.</p>
-
+		<div class="grid-container1">
+			<div class="grid-container2">
+				<button class="grid-item">1</button>
+				<button class="grid-item">2</button>
+				<button class="grid-item">3</button>
+				<button class="grid-item">4</button>
+				<button class="grid-item">5</button>
+				<button class="grid-item">6</button>
+				<button class="grid-item">7</button>
+				<button class="grid-item">8</button>
+				<button class="grid-item">9</button>
+				<button class="grid-item">10</button>
+			</div>
+		</div>
 	</body>
 </html>
 
