--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html>
 	<head>
 		<title>Agri</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="index.css">
 	</head>
-	<body>
-		<div class="grid-container1">
-			<div class="grid-container2">
-				<button class="grid-item">1</button>
-				<button class="grid-item">2</button>
-				<button class="grid-item">3</button>
-				<button class="grid-item">4</button>
-				<button class="grid-item">5</button>
-				<button class="grid-item">6</button>
-				<button class="grid-item">7</button>
-				<button class="grid-item">8</button>
-				<button class="grid-item">9</button>
-				<button class="grid-item">10</button>
+	<body style="background-color: #202020;">
+		<div class="topnavbar">
+			<a class="name">Nikolaj</a>
+			<a class="button" href="projects.html">Projects</a>
+			<a class="button" href="contact.html">Contact</a>
+			<a class="button" href="about.html">About</a>
+			<a class="button" href="index.html">Home</a>
+		</div>
+
+		<div class="mainpage">
+			<div class="grid">
+				<div class="welcometext">
+					<h1>Hi,</h1>
+					<h1>I'm Nikolaj</h1>
+					<h2>I work with</h2>
+					<h5>C  /  C++  /  C#  /  Python</h5>
+				</div>
+				<div class="profile">
+					<img class="profilepic" 
+					src="profile.jpg" 
+					alt="Profile Picture">
+				</div>
 			</div>
 		</div>
 	</body>
