--- a/index.html
+++ b/index.html
@@ -1,63 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>| Home | Agri |</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-
-		<div class="navbar">
-			<a class="name">Nikolaj</a>
-			<a class="button" href="projects.html">Projects</a>
-			<a class="button" href="contact.html">Contact</a>
-			<a class="button" href="about.html">About</a>
-			<a class="button" href="index.html">Home</a>
-		</div>
-
-		<div class="header">
-			<div class="proglang">
-				<a href="https://github.com/nikolaj808">
-					<img class="profilepic" src="https://avatars3.githubusercontent.com/u/45153292?s=460&v=4" alt="Profile Picture">
-				</a>
-				<h1>Programming languages</h1>
-				<br>
-				<span>
-					<em>C | C++ | C# | Python</em>
-				</span>
-			</div>
-		</div>
-
-		<div class="mainpage">
-			<div class="row1">
-				<div class="column">
-					<img src="project1.jpg">
-					<br>
-					<span>
-						<i>Lorem ipsum dolor sit amet, consectetur adipiscing elit</i>
-					</span>
-				</div>
-			</div>
-
-			<div class="row2">
-				<div class="column">
-					<img src="project2.jpg">
-					<br>
-					<span>
-						<i>Curabitur eros nisl, dapibus vel pulvinar eget, vulputate eu lectus</i>
-					</span>
-				</div>
-			</div>
-
-		</div>
-
-		<div class="footer">
-			<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eros nisl, dapibus vel pulvinar eget, vulputate eu lectus. Phasellus at mauris eget mi vulputate fringilla. Pellentesque posuere gravida ultricies. Aenean sollicitudin dolor et augue posuere tempus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer suscipit tellus ac mi aliquam, faucibus pulvinar dui lobortis. Curabitur consequat diam sit amet justo ullamcorper, et bibendum ex aliquam. Fusce efficitur est a euismod gravida. Curabitur id est enim. Maecenas quis ultrices mi.
-			In lacus dolor, interdum sed eros eget, vulputate malesuada tellus. Aliquam tincidunt velit quis libero gravida aliquet. Nulla tempor, nunc non dignissim interdum, felis est lobortis leo, sit amet venenatis libero lacus ut ex. Nulla malesuada libero ac nisl hendrerit ultricies. Nam rutrum sem ligula, ac congue lorem egestas non. Donec euismod ultrices lectus. Vivamus non blandit mauris. Mauris quam sem, rhoncus nec porta quis, rhoncus at erat. Phasellus varius erat mi, blandit efficitur urna dignissim vitae. Mauris quis accumsan purus, sed ultricies ipsum. Suspendisse ullamcorper felis quis lorem ultrices pharetra.
-			</p>
-		</div>
-
-	</body>
-</html>
-
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Potato idle game created using React"/><title>React App</title><link href="/static/css/main.1161a828.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,i=t[0],a=t[1],p=t[2],c=0,s=[];c<i.length;c++)l=i[c],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(f&&f(t);s.length;)s.shift()();return u.push.apply(u,p||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,i=1;i<r.length;i++){var a=r[i];0!==o[a]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="/";var i=this.webpackJsonppotatoidle=this.webpackJsonppotatoidle||[],a=i.push.bind(i);i.push=t,i=i.slice();for(var p=0;p<i.length;p++)t(i[p]);var f=a;r()}([])</script><script src="/static/js/2.ef1938c3.chunk.js"></script><script src="/static/js/main.c80e701c.chunk.js"></script></body></html>
